# VulkanComputeAdventure

./: .gitattributes  .gitignore  README.md
Assignment1/: CMakelists.txt
Assignment1/shaders/: matrixRotNaive.comp  matrixRotOpti.comp  vectorAdd.comp
Assignment1/src/: A1task1.cpp  A1task2.cpp  main.cpp  task_common.cpp  utils.cpp  visualize.py
Assignment2/: CMakelists.txt  device_selection_cache
Assignment2/include/: exercise_template.h  initialization.h  utils.h
Assignment2/libs/: CMakeLists.txt
Assignment2/shaders/: A2Task1Interleaved.comp  A2Task1KernelDecomposition.comp  A2Task1KernelDecompositionAtomic.comp  A2Task1KernelDecompositionUnroll.comp  A2Task1Sequential.comp  A2Task2KernelDecomposition.comp  A2Task2KernelDecompositionOffset.comp  A2Task2Naive.comp
Assignment2/src/: exercise_template.cpp  initialization.cpp  main2.cpp  utils.cpp
Assignment2/src/A2Task1Solution/: Interleaved.cpp  Interleaved.h  KernelDecomposition.cpp  KernelDecomposition.h  Sequential.cpp  Sequential.h
Assignment2/src/A2Task2Solution/: KernelDecomposition.cpp  KernelDecomposition.h  Naive.cpp  Naive.h
